//         Then go the changes in the existing behavior. They usually start with "Update".
//     Bugfixes:
//         Bugfixes go there.
//     Internal changes:
//         Changes to the code that do not affect the behavior of the program.
----------------------------------------------------------------------------------------------------------------------
Version:
Date:
    Features:
        - (SA) Process accessiblilty of captured spawners, which also fixes biter eggs and subsequent Gleba recipes.
        - (SA) Add support for the capture-spawner technology trigger.
        - Add the remaining research triggers and the mining-with-fluid research effect to the dependency/milestone
          analysis.
        - Explain what to do if Yafc fails to load a mod.
    Internal changes:
        - Using the LuaContext after it is freed now produces a better error.
----------------------------------------------------------------------------------------------------------------------
Version: 2.2.0
Date: November 6th 2024
    Features:
        - Add pseudo-items representing a recipe's total sushi-inputs and sushi-outputs.
          They can be toggled on/off in the LMB of the recipe.
        - Add the ability to select qualities for crafters, accumulators, modules, and beacons.
    Bugfixes:
        - Fixed counts are hidden on disabled recipes, since editing them won't work properly.
        - Accomodate modules as spoilage results.
----------------------------------------------------------------------------------------------------------------------
Version: 2.1.0
Date: October 29th 2024
    Features:
        - Focus the built count and fixed count edit boxes when first opening them.
        - Add a dark mode checkbox to the preferences.
    Bugfixes:
        - Recipes no longer have excessive question marks in their names
        - Moved mining and research bonuses have to the Preferences screen.
        - Support games without the Space Age DLC again.