@@ -329,6 +329,12 @@ public abstract class Goods : FactorioObject {
 }
 
 public class Item : Goods {
+    public Item() {
+        getSpoilResult = new(() => getSpoilRecipe()?.products[0].goods);
+        getBaseSpoilTime = new(() => getSpoilRecipe()?.time ?? 0);
+        Recipe? getSpoilRecipe() => Database.recipes.all.OfType<Mechanics>().SingleOrDefault(r => r.name == "spoil." + name);
+    }
+
     /// <summary>
     /// The prototypes in this array will be loaded in order, before any other prototypes.
     /// This should correspond to the prototypes for subclasses of item, with more derived classes listed before their base classes.
@@ -347,6 +353,29 @@ public class Item : Goods {
     public override string type => "Item";
     internal override FactorioObjectSortOrder sortingOrder => FactorioObjectSortOrder.Items;
     public override UnitOfMeasure flowUnitOfMeasure => UnitOfMeasure.ItemPerSecond;
+    /// <summary>
+    /// Gets the result when this item spoils, or <see langword="null"/> if this item doesn't spoil.
+    /// </summary>
+    public FactorioObject? spoilResult => getSpoilResult.Value;
+    /// <summary>
+    /// Gets the time it takes for a base-quality item to spoil, in seconds, or 0 if this item doesn't spoil.
+    /// </summary>
+    public float baseSpoilTime => getBaseSpoilTime.Value;
+    /// <summary>
+    /// Gets the <see cref="Quality"/>-adjusted spoilage time for this item, in seconds, or 0 if this item doesn't spoil.
+    /// </summary>
+    public float GetSpoilTime(Quality quality) => quality.ApplyStandardBonus(baseSpoilTime);
+
+    /// <summary>
+    /// The lazy store for getting the spoilage result. By default it searches for and reads a $"Mechanics.spoil.{name}" recipe,
+    /// but it can be overridden for items that spoil into Entities.
+    /// </summary>
+    internal Lazy<FactorioObject?> getSpoilResult;
+    /// <summary>
+    /// The lazy store for getting the normal-quality spoilage time. By default it searches for and reads a $"Mechanics.spoil.{name}" recipe,
+    /// but it can be overridden for items that spoil into Entities.
+    /// </summary>
+    internal Lazy<float> getBaseSpoilTime;
 
     public override bool HasSpentFuel([NotNullWhen(true)] out Item? spent) {
         spent = fuelResult;
